clippath browser support fix and a couple of other ones

--- a/webapp/src/react/components/button/styles/button.scss
+++ b/webapp/src/react/components/button/styles/button.scss
@@ -348,6 +348,7 @@ $borderColor: $deepBlue-10;
     border: 0px solid $primaryColor;
     border-radius: 50%;
     transform: rotate(-45deg);
+    clip-path: polygon(100% 0, 100% 50%, 50% 50%, 50% 0);
     -webkit-clip-path: polygon(100% 0, 100% 50%, 50% 50%, 50% 0);
     opacity: 0;
     transition: .3s -.3s ease;
@@ -378,6 +379,7 @@ $borderColor: $deepBlue-10;
       border: 3px solid $primaryColor;
       border-radius: 50%;
       transform: rotate(-45deg);
+      clip-path: polygon(100% 0, 100% 50%, 50% 50%, 50% 0);
       -webkit-clip-path: polygon(100% 0, 100% 50%, 50% 50%, 50% 0);
       opacity: 1;
       transition: border-width .15s .25s ease, opacity .15s .25s ease;
