--- a/webapp/src/react/registration/styles/registration.scss
+++ b/webapp/src/react/registration/styles/registration.scss
@@ -86,6 +86,7 @@
 			position: absolute;
 			transform: translateY(-50%) translateX(-22px);
 			transition: .5s ease;
+      clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 			-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
 		}
 	}
@@ -102,6 +103,7 @@
 			left: 0; bottom: -3px;
 			position: absolute;
 			transition: .5s ease;
+      clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
 			-webkit-clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
 		}
 	}
@@ -211,6 +213,7 @@
 			transition: .5s ease;
 
 			&:after {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 				-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 				transition: .5s ease;
 			}
@@ -227,6 +230,7 @@
 			transition: .5s ease;
 
 			&:after {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 				-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 				transition: .5s ease;
 			}
@@ -237,6 +241,7 @@
 			transition: .15s ease;
 
 			&:after {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 				-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 				transition: .5s ease;
 			}
