--- a/webapp/src/react/views/account/onboarding/styles/onboarding.scss
+++ b/webapp/src/react/views/account/onboarding/styles/onboarding.scss
@@ -133,6 +133,7 @@
 		position: absolute;
 		will-change: width, height;
 		transition: .3s all ease-in-out;
+    clip-path: circle(0% at 50% 50%);
 		-webkit-clip-path: circle(0% at 50% 50%);
 
 		#{$b}__progress-number {
@@ -178,6 +179,7 @@
       }
 
       #{$b}__splash {
+        clip-path: circle(100% at 50% 50%);
   			-webkit-clip-path: circle(100% at 50% 50%);
   			transition: .7s cubic-bezier(.7,.07,.42,1.68);
   		}
